# practica2

./: decryptedMessage.txt  encryptedMessage.txt  main.cpp  mainFun.cpp  mainH.h  messages.txt  taskFive.cpp  taskFour.cpp  taskOne.cpp  taskTwoThree.cpp  test.cpp
c++/: decryptedMessage.txt  encryptedMessage.txt  mainFun.cpp  mainH.h  messages.txt  taskFour.cpp
rust/: Cargo.toml
rust/src/: decryptedMessage.txt  encryptedMessage.txt  function.rs  messages.txt  task1.rs  task2-3.rs  task4.rs  task5.rs
