[package]
name = "practica2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "task1"
path = "src/task1.rs"

[[bin]]
name = "task2-3"
path = "src/task2-3.rs"

[[bin]]
name = "task4"
path = "src/task4.rs"

[[bin]]
name = "task5"
path = "src/task5.rs"

[dependencies]
